[NO-JIRA] Remove reported code smells about switch labels