@@ -19,11 +19,11 @@
  */
 package org.sonar.server.issue.ws;
 
-import com.google.common.collect.ImmutableSet;
 import com.google.common.io.Resources;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import javax.annotation.Nullable;
 import org.sonar.api.resources.Qualifiers;
 import org.sonar.api.resources.Scopes;
@@ -126,11 +126,10 @@ public class AuthorsAction implements IssuesWsAction {
     ofNullable(project).ifPresent(p -> {
       switch (p.qualifier()) {
         case Qualifiers.PROJECT:
-          issueQueryBuilder.projectUuids(ImmutableSet.of(p.uuid()));
+          issueQueryBuilder.projectUuids(Set.of(p.uuid()));
           return;
-        case Qualifiers.APP:
-        case Qualifiers.VIEW:
-          issueQueryBuilder.viewUuids(ImmutableSet.of(p.uuid()));
+        case Qualifiers.APP, Qualifiers.VIEW:
+          issueQueryBuilder.viewUuids(Set.of(p.uuid()));
           return;
         default:
           throw new IllegalArgumentException(String.format("Component of type '%s' is not supported", p.qualifier()));
